--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <footer>
 	<p style="text-align:center;font-size:100%;">
-	UNDERTALE (TM) by TOBY FOX<br>UNDERTALE: SHATTERED SOULS (C) 2021 ~ 2022<br>
+	UNDERTALE (TM) and DELTARUNE (TM) by TOBY FOX<br>UNDERTALE: SHATTERED SOULS (C) 2021 ~ 2022<br>
 	Website created by @jevilhumor</u>
 	</p>
 </footer>
