added "Previous Devlogs" button
yeah

--- a/devlog.html
+++ b/devlog.html
@@ -26,6 +26,11 @@
 			things to say...
 		</div>
 	</button></a>
+	<a href="https://gamejolt.com/games/undertale-shattered-souls/616400"><button class="dev-thumb">
+		<font style="color:gray;"></font> Previous Devlogs<br>
+		<div class = "dev-thumb-subtxt">
+		</div>
+	</button></a>
 </body>
 
 <footer>
