--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 		whose entered lived to tell the tale. 
 		<br>
 		</font>
-		Great danger! High stakes! And plenty of brotherly drama, in 
+		Mysterious story, beautiful art, And awesome gameplay, in 
 		<font style = "color:yellow">UNDERTALE : Shattered Souls</font>!
 	</p>
 	
-	<img src = "asset/images/sans_01.png"></img>
+	<img src = "asset/images/sans_01_v2.png"></img>
 	<br><br>
 	<div class="upd-head">
 		Screenshots
@@ -32,13 +32,13 @@
 	
 	<div class = "screenshots"> 
 		<img src = "asset/images/screenshots/Corridor-2.png" class = "screenshot_img"></img><br>
-		The Final Corridor.
+		The Final Corridor
 		<img src = "asset/images/screenshots/Phase1-2.png" class = "screenshot_img"></img><br>
-		The Final Encounter.
+		Phase 1
 		<img src = "asset/images/screenshots/Phase1-3.png" class = "screenshot_img"></img><br>
-		Sans might have done bad things...
+		Special Attack
 		<img src = "asset/images/screenshots/Phase2-3.png" class = "screenshot_img"></img><br>
-		...but nothing compares to <font style = "color:red;">what we've done.</font>
+		Phase 2
 	</div>
 	<br>
 	<div class="upd-head">
