--- a/404.html
+++ b/404.html
@@ -11,8 +11,9 @@
 <body>
     <div style="text-align:center;font-size:200%;">
         <br>404 PAGE NOT FOUND<br>
-        This page does not exist.<br>
+        THIS PAGE DOES NOT EXIST.<br>
     </div>
+    <img class = "faq-sans" src = "asset/images/gaster head.png"></img>
 	<p style="font-size:200%;"><a href="index.html">Return to Home</a></p>
 </body>
 <footer>
