--- a/dev_001.html
+++ b/dev_001.html
@@ -13,7 +13,7 @@
 <body>
 	<p class="logo-br2"><br></p>
 	<div class="upd-head">
-		<image src="asset/images/devlog-header.png" class="art-image"></img>
+		<image src="asset/images/devlog header v3.png" class="art-image"></img>
 		Monthly Devlog #7 - June
 	</div>
 	<div class = "art-desc">
