--- a/devlog.html
+++ b/devlog.html
@@ -18,7 +18,7 @@
 <body>
 	<img class = "faq-sans" src = "asset/images/sans-devlog.png"></img>
 	<a href="dev_001.html"><button class="dev-thumb">
-		<image src="asset/images/devlog-header.png" class="dev-img"></img>
+		<image src="asset/images/devlog header v3.png" class="dev-img"></img>
 		<font style="color:gray;">2022/6/3 -</font> Monthly Devlog #7<br>
 		<div class = "dev-thumb-subtxt">
 			Hey guys, it's me, Salocinick! I suppouse it's time to do 
