--- a/faq.html
+++ b/faq.html
@@ -22,17 +22,17 @@
 		Questions
 	</div>
 	<div class="faq-body">
-		<div class="faq-q">Sample question #1</div>
-		<div class="faq-a">Sample answer #1</div>
+		<div class="faq-q">When the game will be released?</div>
+		<div class="faq-a">We are still not sure but hopefully the <font style = "color:yellow">ALPHA version</font> will be released right after the <font style = "color:rgb(139, 72, 222)">UNDEREVENT</font>.</div>
 		<br>
-		<div class="faq-q">Sample question #2</div>
-		<div class="faq-a">Sample answer #2</div>
+		<div class="faq-q">What does <font style = "color:yellow">ALPHA version</font> contain?</div>
+		<div class="faq-a">The <font style = "color:yellow">ALPHA version</font> contains <font style = "color:rgb(255, 125, 255)">Chapter 0 - Final Corridor</font>.</div>
 		<br>
-		<div class="faq-q">Sample question #3</div>
-		<div class="faq-a">IM GOING INSANE!!!!</div>
+		<div class="faq-q">How many chapters does the full game have?</div>
+		<div class="faq-a">The full game will include 6 chapters<br><font style = "color:grey"> (Including "Chapter ?")</font>.</div>
 		<br>
 	</div>
-	<div class="faq-head">
+	<!-- <div class="faq-head">
 		Troubleshooting
 	</div>
 	<div class="faq-body">
@@ -46,7 +46,7 @@
 		<div class="faq-resolve">Sample resolution #3</div>
 		<br>
 	</div>
-	<br><br>
+	<br><br> -->
 	<font style="font-size: 400%">Contact</font>
 	<div class="faq-body" style = "font-size:24px">
 		<font style="text-align:center;font-family:'8bitoperator Reg';font-size:16px;">
