--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
         <br>404 PAGE NOT FOUND<br>
         THIS PAGE DOES NOT EXIST.<br>
     </div>
-    <img class = "faq-sans" src = "asset/images/gaster head.png"></img>
+    <img class = "gaster head" src = "asset/images/gaster head.png"></img>
 	<p style="font-size:200%;"><a href="index.html">Return to Home</a></p>
 </body>
 <footer>
