--- a/dev_001.html
+++ b/dev_001.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>UT:SS Devlog #1</title>
+  <title>Devlog #1</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" href="asset/favicon.png">
   <script src="navbar.js"></script>
@@ -14,7 +14,7 @@
 	<p class="logo-br2"><br></p>
 	<div class="upd-head">
 		<image src="asset/images/devlog header v3.png" class="art-image"></img>
-		Monthly Devlog #7 - June
+		Monthly Devlog #7 - June (1/2)
 	</div>
 	<div class = "art-desc">
 		Hey guys, it's me, Salocinick! I suppouse it's time to do 
