--- a/devlog.html
+++ b/devlog.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>UT:SS DEVLOGS</title>
+  <title>Development Logs</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" href="asset/favicon.png">
   <script src="navbar.js"></script>
@@ -17,9 +17,18 @@
 
 <body>
 	<img class = "faq-sans" src = "asset/images/sans-devlog.png"></img>
+	<div class="upd-body">
+	<font style="font-size:120%;font-family:'8bitoperator Reg';">Lastest Dev-log</font><br></div>
+	<a href="dev_002.html"><button class="dev-thumb">
+		<image src="asset/images/devlog header v3.png" class="dev-img"></img>
+		<font style="color:gray;">2022/6/25 -</font> Dev-Log #8<br>
+		<div class = "dev-thumb-subtxt">
+			Welp, Hello! I am ShellmeSandles. and i have a lot of things to say today...
+		</div>
+	</button></a>
 	<a href="dev_001.html"><button class="dev-thumb">
 		<image src="asset/images/devlog header v3.png" class="dev-img"></img>
-		<font style="color:gray;">2022/6/3 -</font> Monthly Devlog #7<br>
+		<font style="color:gray;">2022/6/3 -</font> Dev-Log #7<br>
 		<div class = "dev-thumb-subtxt">
 			Hey guys, it's me, Salocinick! I suppouse it's time to do 
 			a monthly Devlog right? But before we start it, I have some 
