--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>UT:SS FAQ</title>
+  <title>FAQ</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" href="asset/favicon.png">
   <script src="navbar.js"></script>
