--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
 <body>
 	<p class="logo-br2"><br></p>
 	<div class="upd-head">
-		<image src="asset/images/devlog-header.png" class="art-image"></img>
+		<image src="asset/images/devlog header v3.png" class="art-image"></img>
 		Sample Devlog Title
 	</div>
 	<div class = "art-desc">
