--- a/dev_002.html
+++ b/dev_002.html
@@ -38,10 +38,10 @@
 		<font style="font-size:180%;font-family:'8bitoperator JVE';">
 			Gamejolt page redesign!<br></font>
 			If you check out our Gamejolt page, you can notice that, we've changed the THUMBNAIL, HEADER and the DEVLOG HEADER to its new versions!<br><br>
-			<img class="art-image" src="asset/images/devlogs/devlog #8/Revamped GJ thumbnail.png"></img><br><br>
-			<img class="art-image" src="asset/images/devlogs/devlog #8/Revamped GJ page"></img><br><br>
+			<img class="art-image" src="asset/images/devlogs/Revamped GJ thumbnail.png"></img><br><br>
+			<img class="art-image" src="asset/images/devlogs/Revamped GJ page.png"></img><br><br>
 			Awesome art on the thumbnail was made by @jevilhumor!<br>And if you still havent noticed, we also have changed our DESCRIPTION!<br><br>
-			<img class="art-image" src="asset/images/devlogs/devlog #8/Revamped GJ description"></img><br><br>
+			<img class="art-image" src="asset/images/devlogs/Revamped GJ description.png"></img><br><br>
 		</div>
 		<div class = "art-body">
 			<font style="font-size:180%;font-family:'8bitoperator JVE';">
