--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 <footer>
 	<p style="text-align:center;font-size:100%;">
 	UNDERTALE (TM) and DELTARUNE (TM) by TOBY FOX<br>UNDERTALE: SHATTERED SOULS (C) 2021 ~ 2022<br>
-	Website created by @jevilhumor</u>
-	</p>
+	Website created by @jevilhumor</u><br>
+	<p style="text-align:center;font-family: 'Windings Reg'; font-size:100%;">
+	<br><br>
+	<br>https://cdn.discordapp.com/<br>attachments/722453483415928885/<br>990519643535982622/LOXYZ.WAV
+	</p></p>
 </footer>
 </html>
